examples/webpy-todo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpy-todo
spec:
  type: NodePort
  selector:
    run: webpy-todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
